# online-store

./: README.md  requirements.txt
admin/: package-lock.json  package.json
backend/: .gitignore  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2025_06_24_2258-7d7ed7e75140_create_all_tables.py  2025_07_17_1708-8463754a9e5d_add_bookimage_table.py  2025_07_19_1728-31bf0e845c65_add_year_characteristics_category_in_.py  2025_07_23_1450-8ed230e06b8d_create_seller_and_buyer_tables.py  2025_07_23_2331-d5e744d3ab31_add_is_active_for_seller_and_buyer_.py  2025_07_25_1528-e0d19d35add9_add_refresh_token_for_buyer_and_seller_.py  2025_07_26_1414-59aa39154a6d_add_nullable_for_refresh_token.py  2025_08_06_1718-d6709b70b0d2_add_book_table.py  2025_08_06_1728-9850148bc4d9_add_nullable_for_refresh_token.py  2025_08_06_1840-eb8a650d4583_add_index_for_categories.py
backend/src/: config.py  database.py  main.py  pyproject.toml  schemes.py
backend/src/auth/: router.py  schemas.py  service.py  utils.py
backend/src/books/: models.py  router.py  schemas.py  service.py
backend/src/buyers/: models.py  router.py  schemas.py  service.py
backend/src/core/: config.py
backend/src/database/: database.py  models.py
backend/src/routes/: auth.py  book.py
backend/src/sellers/: models.py  router.py  schemas.py  service.py
backend/src/utils/: images.py  jwt.py
frontend/: jest.config.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
online-store/: eslint.config.js  index.html  package-lock.json  package.json  requirements.txt  (+2 more)
(+315 files in other folders)
